--- a/views/logoutPage.ejs
+++ b/views/logoutPage.ejs
@@ -36,7 +36,7 @@
         <!-- loogin content3 -->
         <div class="log_btn1">
           <div class="log_btn-outline">
-            <a href="/kg/searchinfo">
+            <a href="/kg/maingame">
               <button class="log_btn2">GAME START</button>
             </a>
           </div>
