--- a/views/game.ejs
+++ b/views/game.ejs
@@ -232,11 +232,11 @@
         </div>
       </div> -->
   </body>
-  <script src="background.js"></script>
-  <script src="floor-1.js"></script>
-  <script src="hurdle-1.js"></script>
-  <script src="jelly-1.js"></script>
-  <script src="UI.js"></script>
-  <script src="hp.js"></script>
-  <script src="main.js"></script>
+  <script src="/js/background.js"></script>
+  <script src="/js/floor-1.js"></script>
+  <script src="/js/hurdle-1.js"></script>
+  <script src="/js/jelly-1.js"></script>
+  <script src="/js/UI.js"></script>
+  <script src="/js/hp.js"></script>
+  <script src="/js/main.js"></script>
 </html>
