--- a/views/map.ejs
+++ b/views/map.ejs
@@ -18,10 +18,10 @@
     <canvas id="background"></canvas>
     <canvas id="main"></canvas>
   </body>
-  <script src="background copy.js"></script>
-  <script src="floor-1 copy.js"></script>
-  <script src="hurdle-1 copy.js"></script>
-  <script src="jelly-1 copy.js"></script>
+  <script src="/js/background copy.js"></script>
+  <script src="/js/floor-1 copy.js"></script>
+  <script src="/js/hurdle-1 copy.js"></script>
+  <script src="/js/jelly-1 copy.js"></script>
   <script>
     function mapTest() {
       requestAnimationFrame(mapTest);
