--- a/views/login.ejs
+++ b/views/login.ejs
@@ -101,22 +101,22 @@
               <div class="img_md">
               <img class="img_md" src="/image/gold.png" alt="">
               </div>
-              <div class="one_id margin_right_5px margin_top_10px">ㅇㅇ</div>
-              <div class="one_po margin_right_50px margin_top_10px">ㅇㅇ</div>
+              <div class="one_id margin_right_5px margin_top_10px"><%=scoreData[0].name %></div>
+              <div class="one_po margin_right_50px margin_top_10px"><%=scoreData[0].score %></div>
             </div>
             <div class="main1">
               <div class="img_md">
               <img class="img_md" src="/image/silver.png" alt="">
               </div>
-              <div class="two_id margin_right_5px margin_top_10px"></div>
-              <div class="two_po margin_right_50px margin_top_10px"></div>
+              <div class="two_id margin_right_5px margin_top_10px"><%=scoreData[1].name %></div>
+              <div class="two_po margin_right_50px margin_top_10px"><%=scoreData[1].score %></div>
             </div>
             <div class="main1">
               <div class="img_md">
               <img class="img_md" src="/image/bronz.png" alt="">
               </div>
-              <div class="three_id margin_right_5px margin_top_10px"></div>
-              <div class="three_po margin_right_50px margin_top_10px"></div>
+              <div class="three_id margin_right_5px margin_top_10px"><%=scoreData[2].name %></div>
+              <div class="three_po margin_right_50px margin_top_10px"><%=scoreData[2].score %></div>
             </div>
         </div>
       </div>
