--- a/views/game.ejs
+++ b/views/game.ejs
@@ -22,6 +22,7 @@
       justify-content: center;
       align-items: center;
       outline: none;
+      user-select: none;
     }
 
     .backImg {
