토큰 만료시 정보찾기 불가

--- a/views/logoutPage.ejs
+++ b/views/logoutPage.ejs
@@ -47,11 +47,9 @@
           </div>
         </div>
         <div id="joinFind">
-          <a
-            href="/kg/searchinfo"
-            onclick="window.open(this.href,'my information','width=800px , height=650px , toolbar-no , scrollbars=yes'); return false;"
-            ><span>my information</span></a
-          >
+          <a href="/kg/searchinfo">
+            <span>my information</span>
+          </a>
         </div>
       </div>
       <!-- ranking 화면 구성할 div 생성 -->
