패스워드 찾기 및 아이디 찾기 구현 중

--- a/views/logoutPage.ejs
+++ b/views/logoutPage.ejs
@@ -47,7 +47,7 @@
           </div>
         </div>
         <div id="joinFind">
-          <a href="/kg/searchinfo">
+          <a href="/kg/myinfo">
             <span>my information</span>
           </a>
         </div>
