--- a/views/searchpw.ejs
+++ b/views/searchpw.ejs
@@ -5,12 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
     비밀번호를 분실한 아이디 및 가입자 성함, 전화번호를 입력 하십시오
-    <input type="text" name="id" placeholder="id">
-    <input type="text" name="phone" placeholder="-을 제외하고 입력 하십시오">
-    <input type="text" name="name" placeholder="name">
+    <input type="text" id="id" placeholder="id">
+    <input type="text" id="phone" placeholder="-을 제외하고 입력 하십시오">
+    <input type="text" id="name" placeholder="name">
+    <button id="clickbtn" onclick="clickbtn()">비밀번호 찾기</button>
     <a href="/kg/searchid">아이디 찾기</a>
 </body>
+<script>
+function clickbtn(){
+    let id = $("#id").val();
+    let phone = $("#phone").val();
+    let name = $("#name").val();
+
+    console.log("버튼 눌림",id,phone,name)
+    $.ajax({
+        url:"/kg/changepw",
+        type:"POST",
+        data:{
+            id: id,
+            phone:phone,
+            name:name
+        },
+        success: function(data){
+            if (data == "fail"){
+                alert("아이디 비밀번호 재 확인 부탁드립니다.")
+            }
+            else if(data == "suc") alert("3분 이내로 변경 부탁드립니다.")
+        }
+    })
+}
+</script>
 </html>
