--- a/views/changepw.ejs
+++ b/views/changepw.ejs
@@ -17,13 +17,16 @@
 function pwbtn(){
     let pw = $("#pw").val();
     $.ajax({
-        url:"/kg/changepw",
+        url:"/kg/changepwhurryup",
         type:"POST",
         data:{
             pw:pw
         },
         success: function(data){
-            swt
+            if(data == "change suc"){
+                alert("비밀번호 재 설정에 성공하였습니다. 재 로그인 부탁드립니다.")
+            }
+            window.location ="/kg/pwtokendel"
         }
     })
 }
