--- a/views/searchpw.ejs
+++ b/views/searchpw.ejs
@@ -34,8 +34,11 @@ function clickbtn(){
             if (data == "fail"){
                 alert("아이디 비밀번호 재 확인 부탁드립니다.")
             }
-            else if(data == "suc") alert("3분 이내로 변경 부탁드립니다.")
+            else if(data == "suc") {
+                window.location = "/kg/changepwhurryup"
+                alert("3분 이내로 변경 부탁드립니다.")
         }
+    }
     })
 }
 </script>
