--- a/views/searchid.ejs
+++ b/views/searchid.ejs
@@ -11,7 +11,7 @@
     <form action="/kg/resultsearchid" method="post">
         <input type="text" name="name" placeholder="name">
         <input type="text" name="phone" placeholder="phone-number">
-        <button type="submit"></button>
+        <button type="submit">아이디 찾기</button>
     </form>
         <a href="/kg/searchpw">비밀번호 찾기</a>
 </body>
